--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ p.plan-price{margin-top:20px;margin-bottom:20px;}
     <!-- Navbar -->
     <nav>
         <div class="logo">
-            <img src="assets/logo.png" alt="Logo" />
+            <img src="logo.png" alt="Logo" />
         </div>
         <div class="menu-toggle" id="menu-toggle">☰</div>
         <div class="menu" id="menu">
