--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratorio de UX - Landing Page</title>
+    <title>PanteraSama | Diseño UX/UI, Auditorías y Pruebas de Usabilidad</title>
+    <meta name="description" content="Descubre cómo mejorar la experiencia de tus usuarios con auditorías UX, diseño de MVPs, pruebas de usabilidad y soporte post-lanzamiento. Transformamos tus ideas en realidades digitales.">
+    <meta name="keywords" content="UX, diseño UX/UI, auditorías UX, pruebas de usabilidad, diseño de MVPs, soporte post-lanzamiento, optimización digital">
+    <meta name="author" content="Laboratorio de UX">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/principal.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
-
-</head>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Laboratorio de UX",
+      "description": "Ofrecemos diseño UX/UI, pruebas de usabilidad y auditorías UX.",
+      "url": "https://constanzat.github.io/uxlab/",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "AR"
+      }
+    }
+    </script>
 <body>
 
 <!-- Aviso de promoción -->
 <div class="promo-banner">
-    <div class="promo-message">¡Hasta el 1/11 tenés un 25% off por transferencia!</div>
+    <div class="promo-message">¡Hasta el 31/1 tenés un 25% off por transferencia!</div>
 </div>
 
 <!-- Resto del contenido -->
@@ -22,7 +36,8 @@
     <!-- Navbar -->
     <nav>
         <div class="logo">
-            <img src="assets/logo.png" alt="Logo" />
+            <img src="assets/logo.png" alt="Logo del Laboratorio de UX PanteraSama Studio">
+
         </div>
         <div class="menu-toggle" id="menu-toggle">☰</div>
         <div class="menu" id="menu">
@@ -48,8 +63,9 @@
             <source src="assets/video.mp4" type="video/mp4">
             
         </video>
-        <h1>PanteraSama Studio</h1>
-        <p>UX Services</p>
+        <h1>Servicios de UX/UI</h1>
+
+        <p>Psicología centrada en el usuario</p>
         <a href="#" class="cta-button-secondary">Descubre Panterasama Studio</a>
         <div class="wave"></div>
     </div>
