--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="menu-toggle" id="menu-toggle">☰</div>
         <div class="menu" id="menu">
             <a href="index.html">Inicio</a>
-            <a href="quehacemos.html">'¿Qué hacemos?'</a>
+            <a href="quehacemos.html">¿Qué hacemos?</a>
       
         </div>
     </nav>
