--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </video>
         <h1>Servicios de UX/UI</h1>
 
-        <p>Psicología centrada en el usuario</p>
-        <a href="#" class="cta-button-secondary">Descubre Panterasama Studio</a>
+        <p>Descubrí Panterasama Studio</p>
+        <a href="#" class="cta-button-secondary">Solicitá una reunión virtual</a>
         <div class="wave"></div>
     </div>
     
