nueva seccion equipo

--- a/quehacemos.html
+++ b/quehacemos.html
@@ -18,6 +18,7 @@
     <div class="menu" id="menu">
         <a href="index.html">Inicio</a>
         <a href="quehacemos.html">¿Qué hacemos?</a>
+        <a href="sobre_nosotros.html">Equipo</a>
  
     </div>
 </nav>
@@ -84,7 +85,158 @@
     </div>
 </section>
 
+<h2>Paso a paso del proceso en PanteraSama</h2>
+<div class="value-proposition">
+    <div class="step">
+        <div class="step-icon reclutamiento">📩</div>
+        <div class="step-title">Solicitud</div>
+        <div class="step-desc">El cliente nos contacta con una necesidad específica de diseño UX.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon seleccion">📋</div>
+        <div class="step-title">Reunión Inicial</div>
+        <div class="step-desc">Organizamos una reunión para entender los objetivos, alcance y requisitos del proyecto.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon induccion">🔍</div>
+        <div class="step-title">Investigación</div>
+        <div class="step-desc">Realizamos un análisis de usuarios, benchmarking y recopilación de insights clave.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon capacitacion">✏️</div>
+        <div class="step-title">Ideación y Prototipado</div>
+        <div class="step-desc">Diseñamos wireframes y prototipos de alta fidelidad basados en las necesidades del usuario.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon desarrollo">🧪</div>
+        <div class="step-title">Pruebas de Usabilidad</div>
+        <div class="step-desc">Validamos los prototipos con usuarios reales para iterar y mejorar la experiencia.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon retencion">📂</div>
+        <div class="step-title">Entrega</div>
+        <div class="step-desc">Compartimos entregables finales: diseños, guías de estilo y documentación para el equipo de desarrollo.</div>
+    </div>
+    <div class="step">
+        <div class="step-icon salida">🤝</div>
+        <div class="step-title">Soporte Post-Entrega</div>
+        <div class="step-desc">Ofrecemos soporte adicional durante la implementación tecnológica.</div>
+    </div>
+</div>
 
+<section id="planes" class="section">
+    <h2>Planes y Membresías</h2>
+    <p>Ofrecemos diversas opciones de planes que se adaptan a tus necesidades, desde auditorías puntuales hasta membresías continuas que garantizan el éxito de tu producto en el tiempo. Consulta nuestros planes para encontrar la opción que mejor se ajuste a tu proyecto.</p>
+
+    <div class="plans">
+        <!-- Plan Básico -->
+        <div class="plan-card">
+            <h3>Plan Básico</h3>
+            <p>Diseñado para startups y proyectos iniciales, enfocado en crear un MVP funcional y una landing page optimizada.</p>
+            <p class="plan-price"><strong>Precio: $500 USD</strong></p>
+            <ul>
+                <li>✔️ Diseño de MVP (3-5 pantallas clave)</li>
+                <li>✔️ Landing Page Optimizada</li>
+                <li>✔️ Informe UX Inicial</li>
+                <li>❌ Pruebas de Usabilidad</li>
+                <li>❌ Soporte Post-Lanzamiento</li>
+                <li>❌ Iteraciones Ilimitadas</li>
+                <li>❌ Acceso a Métricas Avanzadas</li>
+            </ul>
+            <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20Básico" class="cta-button-secondary">Seleccionar Plan</a>
+            <button class="toggle-details" onclick="toggleDetails('detalle-basico')">Ver Más</button>
+        </div>
+
+        <!-- Plan Profesional -->
+        <div class="plan-card">
+            <h3>Plan Profesional</h3>
+            <p>Ideal para empresas que buscan validar ideas y optimizar su presencia digital con prototipos avanzados y pruebas iterativas.</p>
+            <p class="plan-price"><strong>Precio: $1200 USD</strong></p>
+            <ul>
+                <li>✔️ Diseño de MVP Mejorado</li>
+                <li>✔️ Landing Page + Página Complementaria</li>
+                <li>✔️ Pruebas de Usabilidad</li>
+                <li>✔️ Informe Detallado y Recomendaciones</li>
+                <li>✔️ Iteraciones durante 1 mes</li>
+                <li>❌ Soporte Integral Post-Lanzamiento</li>
+                <li>❌ Métricas Continuas</li>
+            </ul>
+            <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20Profesional" class="cta-button-secondary">Seleccionar Plan</a>
+            <button class="toggle-details" onclick="toggleDetails('detalle-profesional')">Ver Más</button>
+        </div>
+
+        <!-- Plan Premium -->
+        <div class="plan-card">
+            <h3>Plan Premium</h3>
+            <p>La experiencia UX más completa, con soporte integral, mejoras continuas y acceso a análisis avanzados.</p>
+            <p class="plan-price"><strong>Precio: $2000 USD</strong></p>
+            <ul>
+                <li>✔️ Diseño UX Completo</li>
+                <li>✔️ Hasta 5 Páginas Web Personalizadas</li>
+                <li>✔️ Soporte Integral (Pre, Durante y Post Lanzamiento)</li>
+                <li>✔️ Mejoras Iterativas Continuas por 3 meses</li>
+                <li>✔️ Dashboard de Métricas UX</li>
+                <li>✔️ Consultoría Estratégica Mensual</li>
+            </ul>
+            <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20Premium" class="cta-button-secondary">Seleccionar Plan</a>
+            <button class="toggle-details" onclick="toggleDetails('detalle-premium')">Ver Más</button>
+        </div>
+    </div>
+
+    <!-- Detalles Ocultos -->
+    <div id="detalle-basico" class="details hidden">
+        <h2>Detalle del Plan Básico</h2>
+        <p>El Plan Básico está diseñado para quienes están dando sus primeros pasos en el desarrollo de productos digitales.</p>
+        <ul id="detalle-basico">
+            <li><strong>MVP:</strong> Diseño de un prototipo funcional con 3-5 pantallas clave.</li>
+            <li><strong>Landing Page:</strong> Optimizada para captar leads y probar ideas de negocio.</li>
+            <li><strong>Informe UX:</strong> Análisis inicial para identificar oportunidades y retos del producto.</li>
+        </ul>
+    </div>
+    <div id="detalle-profesional" class="details hidden">
+        <h2>Detalle del Plan Profesional</h2>
+        <p>El Plan Profesional es ideal para empresas que buscan validar conceptos y optimizar la experiencia del usuario.</p>
+        <ul id="detalle-basico">
+            <li><strong>MVP Mejorado:</strong> Prototipos interactivos y pruebas iterativas.</li>
+            <li><strong>Landing Page + Página Complementaria:</strong> Diseño alineado con los objetivos del negocio.</li>
+            <li><strong>Pruebas de Usabilidad:</strong> Evaluaciones para resolver fricciones y mejorar la experiencia.</li>
+            <li><strong>Iteraciones:</strong> Cambios ilimitados durante el primer mes tras la entrega.</li>
+        </ul>
+    </div>
+    <div id="detalle-premium" class="details hidden">
+        <h2>Detalle del Plan Premium</h2>
+        <p>El Plan Premium garantiza una experiencia integral, diseñada para proyectos de alto impacto.</p>
+        <ul id="detalle-basico">
+            <li><strong>Diseño UX Completo:</strong> Desde investigación hasta implementación final.</li>
+            <li><strong>Páginas Personalizadas:</strong> Hasta 5 páginas con branding completo.</li>
+            <li><strong>Soporte Integral:</strong> Incluye pre, durante y post lanzamiento.</li>
+            <li><strong>Mejoras Continuas:</strong> Iteraciones constantes durante 3 meses.</li>
+            <li><strong>Métricas UX:</strong> Dashboard de seguimiento y optimización.</li>
+            <li><strong>Consultoría:</strong> Sesiones estratégicas mensuales para guiar el éxito del proyecto.</li>
+        </ul>
+    </div>
+</section>
+<script>
+    function toggleDetails(id) {
+        const details = document.getElementById(id);
+        details.classList.toggle('hidden');
+    }
+
+    </script>        
+    <script>
+   
+function toggleDetails(id) {
+const details = document.getElementById(id);
+
+// Alternar la visibilidad del contenido
+details.classList.toggle('hidden');
+
+// Si el contenido se muestra, desplazar hacia esa sección
+if (!details.classList.contains('hidden')) {
+    details.scrollIntoView({ behavior: 'smooth', block: 'start' });
+}
+}
+</script>
 <!-- Footer -->
 <footer>
     <p>&copy; 2025 Panterasama Studio. Todos los derechos reservados.</p>
