--- a/quehacemos.html
+++ b/quehacemos.html
@@ -12,13 +12,12 @@
 <!-- Navbar -->
 <nav>
     <div class="logo">
-        <img src="assets/logo.png" alt="Logo" />
+      <a href="index.html"><img src="assets/logo.png" alt="Logo" /></a>  
     </div>
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <div class="menu" id="menu">
         <a href="index.html">Inicio</a>
         <a href="quehacemos.html">¿Qué hacemos?</a>
-        <a href="sobre_nosotros.html">Equipo</a>
  
     </div>
 </nav>
@@ -37,7 +36,6 @@
             <div class="card-icon">🚀</div>
             <h3 class="card-title">Rediseño de Plataforma Educativa</h3>
             <p class="card-paragraph">Aumentamos un 35% la retención de estudiantes al optimizar la interfaz y mejorar la accesibilidad.<br><br><br></p>
-            <a href="#" class="card-button">Leer más</a>
             <div class="card-details">
                 <h4>Detalles del Proyecto:</h4>
                 <ul>
@@ -46,6 +44,8 @@
                     <li><strong>Solución:</strong> Simplificamos la estructura del menú, diseñamos dashboards personalizados y añadimos herramientas de accesibilidad como lectura en voz alta y contraste de colores.</li>
                     <li><strong>Resultados:</strong> Incremento del 35% en retención y un 40% más de interacción con los recursos educativos.</li>
                 </ul>
+                <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20" class="cta-button-secondary"> Consultar por planes</a>
+
             </div>
         </div>
 
@@ -54,7 +54,6 @@
             <div class="card-icon">📈</div>
             <h3 class="card-title">Optimización de Aplicación Financiera</h3>
             <p class="card-paragraph">Logramos un 50% más de conversiones gracias a un diseño intuitivo y pruebas de usabilidad.<br><br><br></p>
-            <a href="#" class="card-button">Leer más</a>
             <div class="card-details">
                 <h4>Detalles del Proyecto:</h4>
                 <ul>
@@ -63,6 +62,8 @@
                     <li><strong>Solución:</strong> Diseñamos un proceso de onboarding claro, simplificamos el diseño del dashboard y realizamos pruebas iterativas para ajustar la experiencia.</li>
                     <li><strong>Resultados:</strong> 50% más de conversiones y un aumento del 25% en el tiempo promedio dentro de la app.</li>
                 </ul>
+                <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20" class="cta-button-secondary"> Consultar por planes</a>
+
             </div>
         </div>
 
@@ -71,7 +72,6 @@
             <div class="card-icon">🌍</div>
             <h3 class="card-title">Proyecto de Expansión Global</h3>
             <p class="card-paragraph">Apoyamos a una startup a conquistar nuevos mercados con un diseño adaptado a múltiples culturas.</p>
-            <a href="#" class="card-button">Leer más</a><br>
             <div class="card-details">
                 <h4>Detalles del Proyecto:</h4>
                 <ul>
@@ -80,6 +80,8 @@
                     <li><strong>Solución:</strong> Realizamos un diseño modular, adaptable a lenguajes y costumbres locales, con elementos visuales inclusivos y pruebas culturales en mercados clave.</li>
                     <li><strong>Resultados:</strong> La startup alcanzó un 70% de adopción en mercados objetivo y obtuvo un retorno de inversión del 120% en el primer año.</li>
                 </ul>
+                <a href="https://wa.me/5491128074418?text=Estoy%20interesado%20en%20el%20Plan%20" class="cta-button-secondary"> Consultar por planes</a>
+
             </div>
         </div>
     </div>
@@ -239,7 +241,7 @@ if (!details.classList.contains('hidden')) {
 </script>
 <!-- Footer -->
 <footer>
-    <p>&copy; 2025 Panterasama Studio. Todos los derechos reservados.</p>
+    <p>&copy; 2025 UXTracking Labs PanteraSama. Todos los derechos reservados.</p>
     <a href="#exitos">Volver arriba</a>
 </footer>
 
