--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h1>UX Tracking, Usabilidad y Psicología Aplicada</h1>
 
         <p>🚀 ¿Listo para potenciar tu producto?</p>
-        <a href="#" class="cta-button-secondary">Solicitá una reunión virtual y descubrí cómo podemos ayudarte</a>
+        <a href="https://wa.me/5491128074418?text=Quiero%20una%20reuni%C3%B3n%20virtual" class="cta-button-secondary"> Solicitá una reunión virtual</a>   
         <div class="wave"></div>
     </div>
     
