--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div class="menu" id="menu">
         <a href="index.html">Inicio</a>
         <a href="quehacemos.html">¿Qué hacemos?</a>
+        <a href="index_en.html">English</a>
+
     </div>
 </nav>
 <div class="menu-modal" id="menu-modal">
@@ -71,6 +73,8 @@
         <span class="close-modal" id="close-modal">&times;</span>
         <a href="index.html">Inicio</a>
         <a href="quehacemos.html">¿Qué hacemos?</a>
+        <a href="index_en.html">English</a>
+
     </div>
 </div>
 
