--- a/quehacemos.html
+++ b/quehacemos.html
@@ -18,6 +18,8 @@
     <div class="menu" id="menu">
         <a href="index.html">Inicio</a>
         <a href="quehacemos.html">¿Qué hacemos?</a>
+        <a href="quehacemos_en.html">English</a>
+
  
     </div>
 </nav>
