--- a/quehacemos_en.html
+++ b/quehacemos_en.html
@@ -19,7 +19,7 @@
   <div class="menu" id="menu">
     <a href="index_en.html">Home</a>
     <a href="quehacemos_en.html">What We Do?</a>
-    <a href="quehacemos_en.html">Español</a>
+    <a href="quehacemos.html">Español</a>
 
   </div>
 </nav>
